# paperscope

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  expl.py  pyproject.toml  run_summary.json
.github/workflows/: ci.yml  fetch-reviews.yml
demo/: example_review.md  sample_batch.json  sample_claims.json  sample_evidence.json  sample_reference.md  sample_skill_manifest.json  sample_skill_reference.md  sample_statistics.json  venue_stats.md
demo/eval/: README.md  baseline_predictions.json  calibration_forums.json  corpus.jsonl  generic_predictions.json  paperscope_predictions.json
docs/: evaluation.md  generation.md  redistribution.md  skill_building.md  statistics_and_evidence.md
docs/assets/: eval_summary_public.json
full/: iclr.cursors.json
public/: iclr.jsonl  iclr.manifest.json
scripts/: generate_evaluation_figures.py  generate_predictions.py  summarize_run.py
skill/: SKILL.md
skill/references/: cvpr.md  iclr.md  icml.md  neurips.md
src/paperscope/: cli.py  config.py  discovery.py  evaluation.py  evidence.py  generation.py  llm_provider.py  models.py  openreview_client.py  parsing.py  refresh_policy.py  storage.py  (+4 more)
tests/: conftest.py  test_cli.py  test_cli_lazy_auth.py  test_discovery.py  test_evaluation.py  test_evidence.py  test_expl_shim.py  test_generation.py  test_integration.py  test_models.py  test_no_data_directory_regression.py  test_openreview_client.py  test_optional_anthropic.py  test_parsing.py  test_refresh_policy.py  test_sampling.py  test_skill_builder.py  test_statistics.py  test_storage.py  test_venue_resolution.py
(+13 files in other folders)
