[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperscope"
version = "0.1.0"
description = "Venue-calibrated ML paper reviewer skill built from real OpenReview data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openreview-py>=1.35",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
paperscope = "paperscope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: exercises a real, locally-fetched corpus; skips unless PAPERSCOPE_TEST_CORPUS is set and points at an existing file; never required for CI.",
]
